--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,8 +105,9 @@
        
 
         <a href="/patient-list">View Patients</a> | 
-        <a href="/register">Register New Patient</a>
-
+        <a href="/register">Register New Patient</a> 
+		| 
+		        <a href="/doctor-register">Register New Doctor</a>
         <h2>Why choose us?</h2>
         <p>
             - Manage patient information securely and efficiently.<br>
